--- a/files_and_formats.qmd
+++ b/files_and_formats.qmd
@@ -286,10 +286,7 @@ You can see here on the first few rows, the `PUMA` values are `"00101"`, `"00101
 ```{r}
 #| label: pums-puma-readlines
 #| width_limit: 72
-readLines(
-  "./data/raw_csvs/person/2021/ak/psam_p02.csv",
-  n = 5
-)
+readLines("./data/raw_csvs/person/2021/ak/psam_p02.csv", n = 5)
 ```
 
 However, if we read in our CSV subset without providing a schema, despite the leading zeroes being present in the data, the data type of this column is inferred to be an integer.
@@ -353,9 +350,7 @@ One option is to supply column types for a subset of columns, by providing a par
 # Read CSV file and specify a partial schema
 read_csv_arrow(
   "./data/raw_csvs/person/2021/ak/psam_p02.csv",
-  col_types = schema(
-    PUMA = string()
-  )
+  col_types = schema(PUMA = string())
 )
 ```
 
@@ -368,12 +363,11 @@ You can extract the schema using the `schema()` function.
 #| label: get-schema
 #| eval: TRUE
 # Read in the file as an Arrow Table and get its schema
-one_state_schema <- schema(
-  read_csv_arrow(
-    "./data/raw_csvs/person/2021/ak/psam_p02.csv",
-    as_data_frame = FALSE
-  )
+pums_csv_one_state <- read_csv_arrow(
+  "./data/raw_csvs/person/2021/ak/psam_p02.csv"
 )
+
+one_state_schema <- schema(pums_csv_one_state)
 ```
 
 Schemas can be interacted with like lists in R, and so if we want to look more closely at one of these column name to data type mappings, we can extract it using the `[[` or `$` operator.
@@ -408,10 +402,10 @@ In real use, call `one_state_schema$code()` to use the whole schema.
 ```{r}
 #| label: schema-code
 # Print the code needed to create this schema
-one_state_schema[
-  c("RT", "SERIALNO", "DIVISION", "SPORDER",
-    "PUMA", "REGION", "ST")
-]$code()
+subset_cols <- c("RT", "SERIALNO", "DIVISION", "SPORDER", 
+                 "PUMA", "REGION", "ST")
+
+one_state_schema[subset_cols]$code()
 ```
 
 The last bit of schema manipulation which is useful to know about is how to add or remove items from a schema.
@@ -421,10 +415,11 @@ You can add a new item by assigning a data type to a new item in the schema.
 ```{r}
 #| label: add_to_schema
 one_state_schema[["new_var"]] <- float64()
-one_state_schema[
-  c("RT", "SERIALNO", "DIVISION", "SPORDER",
-    "PUMA", "REGION", "ST", "new_var")
-]
+
+subset_cols <- c("RT", "SERIALNO", "DIVISION", "SPORDER",
+                 "PUMA", "REGION", "ST", "new_var")
+
+one_state_schema[subset_cols]
 ```
 
 To remove items from a schema or select a subset, you can create a new schema containing a vector of the names of the desired fields.
@@ -452,10 +447,7 @@ You can write CSV files to disk using `write_csv_arrow()`.
 #| label: write-csv
 #| eval: false
 # Save `pums_subset` to CSV file
-write_csv_arrow(
-  pums_subset,
-  file.path(tmp_dir, "new_pums.csv")
-)
+write_csv_arrow(pums_subset, file.path(tmp_dir, "new_pums.csv"))
 ```
 
 If you're working with large CSV files, you may want to compress them to reduce the amount of space they take up on disk.
@@ -711,10 +703,7 @@ First, let's look at the file size of the Parquet file for Washington in 2021, w
 
 ```{r}
 #| label: pums-subset-size
-wa_21_path <- paste0(
-  "./data/person/year=2021/location=wa/",
-  "part-0.parquet"
-)
+wa_21_path <- "./data/person/year=2021/location=wa/part-0.parquet"
 fs::file_size(wa_21_path)
 ```
 
@@ -742,10 +731,7 @@ Let's take a look at the `MAR` column in the PUMS person dataset subset, represe
 
 ```{r}
 #| label: mar-values
-pums_subset_mar <- read_parquet(
-  wa_21_path,
-  col_select = MAR
-)
+pums_subset_mar <- read_parquet(wa_21_path, col_select = MAR)
 
 count(pums_subset_mar, MAR)
 ```
@@ -853,10 +839,7 @@ nested_data <- tibble::tibble(
 
 ```{r}
 #| label: nested-col-roundtrip
-write_parquet(
-  nested_data,
-  "./data/transient_data/nested_data.parquet"
-)
+write_parquet(nested_data, "./data/transient_data/nested_data.parquet")
 
 read_parquet("./data/transient_data/nested_data.parquet")
 ```
